--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "koa": "^2.5.2",
     "koa-json": "^2.0.2",
-    "koa-static": "^5.0.0"
+    "koa-static": "^5.0.0",
+    "lodash": "^4.17.11",
+    "rodash": "^1.0.2"
   }
 }
